--- a/03 - Belajar Fundamental Front-End Web Development/01 - ECMAScript 6/14 - import sekaligus.html
+++ b/03 - Belajar Fundamental Front-End Web Development/01 - ECMAScript 6/14 - import sekaligus.html
@@ -11,7 +11,7 @@
     <ul id="coffee-stock-list"></ul>
     <button id="coffee-order-button">Pesan Kopi!</button>
 
-    <script src="./module/app.mjs" type="module"></script>
+    <script src="./script/app.mjs" type="module"></script>
 
 </body>
 </html>
