--- a/03 - Belajar Fundamental Front-End Web Development/02 - web components/02 - attributChangedCallback/index.html
+++ b/03 - Belajar Fundamental Front-End Web Development/02 - web components/02 - attributChangedCallback/index.html
@@ -6,15 +6,15 @@
     <title>custom element</title>
 </head>
 <body>
-
-    <a href="../">back..</a>
     
+    <a href="../">back..</a>
+
     <image-figure
         src="https://th.bing.com/th?id=OSK.5a3504488930fa7ac053ec00101eb08b&w=68&h=68&o=6&dpr=1.5&pid=SANGAM"
         alt="Dicoding Logo"
         caption="Huruf g dalam logo Dicoding">
     </image-figure>
-    <script src="./conncectedCallback.js"></script>
+    <script src="./script.js"></script>
     
 </body>
 </html>
