--- a/03 - Belajar Fundamental Front-End Web Development/02 - web components/ClubFinder k/index.html
+++ b/03 - Belajar Fundamental Front-End Web Development/02 - web components/ClubFinder k/index.html
@@ -8,9 +8,7 @@
 </head>
 <body>
 <header>
-  <div id="appBar" class="app-bar">
-    <h2>Club Finder</h2>
-  </div>
+  <app-bar></app-bar>
 </header>
 <main>
   <div id="search-container" class="search-container">
@@ -20,6 +18,9 @@
   <div id="clubList"></div>
 </main>
 
+<!-- <script src="src/script/data/clubs.js"></script>
+<script src="src/script/data/data-source.js"></script>
+<script src="src/script/view/main.js"></script> -->
 <script src="app.js" type="module"></script>
 </body>
 </html>
