--- a/03 - Belajar Fundamental Front-End Web Development/03 - packet manager/02 - web clock/index.html
+++ b/03 - Belajar Fundamental Front-End Web Development/03 - packet manager/02 - web clock/index.html
@@ -14,12 +14,7 @@
         <span class="date"></span>
     </div>
 
-    <script src="./dist/main.js"></script>
-
-    <!-- <script src="./node_modules/moment/moment.js"></script>
-    <script src="./node_modules/jquery/dist/jquery.min.js"></script> -->
-
-    <!-- <script src="./src/index.js"></script> -->
+    <script src="./dist/bundle.js"></script>
 
 </body>
 </html>
