--- a/05 - Menjadi Front-End Web Developer Expert/01 - dicoding-blog/src/index.html
+++ b/05 - Menjadi Front-End Web Developer Expert/01 - dicoding-blog/src/index.html
@@ -18,6 +18,7 @@
       <div class="header__inner">
         <h1 class="header__title">Dicoding's Blog</h1>
       </div>
+      <a id="menu" class="header__menu">☰</a>
     </header>
     <nav id="drawer" class="nav">
       <ul class="nav__list">
