--- a/04 - Belajar Tools Front-End Web Intermediate/02 - CSS boostrap/02 - boostrap/04 - utilities.html
+++ b/04 - Belajar Tools Front-End Web Intermediate/02 - CSS boostrap/02 - boostrap/04 - utilities.html
@@ -13,6 +13,138 @@
 <body>
     <a class="btn btn-primary" href="../index.html">back</a> <br>
 
+    <!-- Utility: Text -->
+    text aligment
+    <p class="p-2 border border-dark text-start">
+        Bangun kariermu sebagai developer profesional bersama Dicoding Indonesia
+    </p>
+    <p class="p-2 border border-dark text-center">
+        Bangun kariermu sebagai developer profesional bersama Dicoding Indonesia
+    </p>
+    <p class="p-2 border border-dark text-end">
+        Bangun kariermu sebagai developer profesional bersama Dicoding Indonesia
+    </p>
+
+    wrap
+    <div class="bg-primary text-bg-primary text-wrap" style="width: 5rem">
+        Bangun kariermu sebagai developer profesional bersama Dicoding Indonesia
+    </div>
+
+    <div class="bg-warning text-nowrap" style="width: 5rem">
+        Bangun kariermu sebagai developer profesional bersama Dicoding Indonesia
+    </div>
+
+    Font Size
+    <p class="fs-1">Teks dengan fs-1 atau 2.5rem</p>
+    <p class="fs-2">Teks dengan fs-2 atau 2rem</p>
+    <p class="fs-3">Teks dengan fs-3 atau 1.75rem</p>
+    <p class="fs-4">Teks dengan fs-4 atau 1.5rem</p>
+    <p class="fs-5">Teks dengan fs-5 atau 1.25rem</p>
+    <p class="fs-6">Teks dengan fs-6 atau 1rem</p>
+
+    Font Weight
+    <p class="fw-bold">Teks dengan fw-bold atau 700</p>
+    <p class="fw-bolder">Teks dengan fw-bolder atau bolder</p>
+    <p class="fw-semibold">Teks dengan fw-semibold atau 600</p>
+    <p class="fw-normal">Teks dengan fw-normal atau 400</p>
+    <p class="fw-light">Teks dengan fw-light atau 300</p>
+    <p class="fw-lighter">Teks dengan fw-lighter atau lighter</p>
+
+    Text Decoration
+    <p class="text-decoration-underline">Menjadi Front-End Web Developer Expert</p>
+    <p class="text-decoration-line-through">Merokok</p>
+    <a href="https://www.dicoding.com/" class="text-decoration-none">www.dicoding.com</a>
+
+    <!-- Utility: Content Dimension dan Border -->
+    Content Dimension
+    <div class="w-25 p-2 bg-primary text-bg-primary">Width 25%</div>
+    <div class="w-50 p-2 bg-success text-bg-success">Width 50%</div>
+    <div class="w-75 p-2 bg-warning text-bg-warning">Width 75%</div>
+    <div class="w-100 p-2 bg-danger text-bg-danger">Width 100%</div>
+    <div class="w-auto p-2 bg-info text-bg-info">Width auto</div>
+
+    Border
+    <div style="width: 100px; height: 100px" class="bg-dark bg-opacity-10 border border-2 border-dark"></div>
+    <div style="width: 100px; height: 100px" class="bg-dark bg-opacity-10 border-top border-2 border-dark"></div>
+    <div style="width: 100px; height: 100px" class="bg-dark bg-opacity-10 border-end border-2 border-dark"></div>
+    <div style="width: 100px; height: 100px" class="bg-dark bg-opacity-10 border-bottom border-2 border-dark"></div>
+    <div style="width: 100px; height: 100px" class="bg-dark bg-opacity-10 border-start border-2 border-dark"></div>
+
+    Utility: Spacing
+    <div style="box-sizing: content-box" class="d-flex">
+        <div style="width: 50px; height: 50px" class="m-0 p-0 bg-primary"></div>
+        <div style="width: 50px; height: 50px" class="m-3 p-3 bg-success"></div>
+        <div style="width: 50px; height: 50px" class="pt-5 bg-warning"></div>
+        <div style="width: 50px; height: 50px" class="my-5 bg-danger"></div>
+        <div style="width: 50px; height: 50px" class="px-3 bg-info"></div>
+    </div>
+
+    <!-- Utility: Display dan Position -->
+    Display
+    <img src="https://raw.githubusercontent.com/dicodingacademy/BelajarDasarPemrogramanWeb/image-assets/dicoding-logo.png"
+        alt="Dicoding Indonesia" class="w-25 d-block" />
+    <span class="d-block">Bangun kariermu sebagai developer profesional bersama Dicoding Indonesia</span>
+
+    Position
+    <div class="min-vh-100 bg-success bg-opacity-50"></div>
+    <div class="min-vh-100 bg-info bg-opacity-50"></div>
+    <div class="min-vh-100 bg-warning bg-opacity-50"></div>
+    <div class="min-vh-100 bg-danger bg-opacity-50"></div>
+
+    <div class="m-auto flex-grow-1">
+        <div class="position-fixed end-0 bottom-0 mb-4 me-4">
+            <button style="width: 40px; height: 40px" class="btn btn-primary p-0 bg-opacity-75 d-flex rounded-pill">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
+                    class="bi bi-chevron-up m-auto" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd"
+                        d="M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z" />
+                </svg>
+            </button>
+        </div>
+    </div>
+
+    <!-- Utility: Shadow dan Opacity -->
+    Shadow
+    <div class="shadow-none px-5 py-2 bg-light">No shadow</div>
+    <div class="shadow-sm px-5 py-2 bg-body">Small shadow</div>
+    <div class="shadow px-5 py-2 bg-body">Medium shadow</div>
+    <div class="shadow-lg px-5 py-2 bg-body">Large shadow</div>
+
+    Opacity
+    <style>
+        .box {
+            width: 100px;
+            height: 100px;
+
+            line-height: 100px;
+            text-align: center;
+        }
+    </style>
+
+    <div class="d-flex flex-column gap-5">
+        <div>
+            <p class="text-center flex-grow-1">Tanpa opacity</p>
+            <div class="w-100"></div>
+            <div class="d-flex gap-4">
+                <div class="box bg-primary text-bg-primary"></div>
+                <div class="box bg-success text-bg-success"></div>
+                <div class="box bg-warning text-bg-warning"></div>
+                <div class="box bg-danger text-bg-danger"></div>
+                <div class="box bg-info text-bg-info"></div>
+            </div>
+        </div>
+        <div>
+            <p class="text-center flex-grow-1">Dengan opacity</p>
+            <div class="w-100"></div>
+            <div class="d-flex gap-4">
+                <div class="box opacity-100 bg-primary text-bg-primary">100%</div>
+                <div class="box opacity-75 bg-success text-bg-success">75%</div>
+                <div class="box opacity-50 bg-warning text-bg-warning">50%</div>
+                <div class="box opacity-25 bg-danger text-bg-danger">25%</div>
+                <div class="box opacity-0 bg-info text-bg-info">0%</div>
+            </div>
+        </div>
+    </div>
 
 </body>
 
