--- a/04 - Belajar Tools Front-End Web Intermediate/02 - CSS boostrap/index.html
+++ b/04 - Belajar Tools Front-End Web Intermediate/02 - CSS boostrap/index.html
@@ -14,7 +14,8 @@
   <a href="./02 - boostrap/01 - components.html" class="btn btn-primary">01</a>
   <a href="./02 - boostrap/02 - form.html" class="btn btn-primary">02</a>
   <a href="./02 - boostrap/03 - layouting.html" class="btn btn-primary">03</a>
-  <a href="." class="btn btn-primary">04</a>
+  <a href="./02 - boostrap/04 - utilities.html" class="btn btn-primary">04</a>
+  <a href="./02 - boostrap/05 - cusom boostarp.html" class="btn btn-primary">05</a>
 
 </body>
 
